# frugalwareutils

./: .gitignore  AUTHORS  Doxyfile  Makefile  Makefile.conf.inc  Makefile.inc  Makefile.lib.inc  Makefile.po.inc  NEWS  README  TODO  autogen.sh  config.mak.in  configure.ac
apidoc/: .gitignore  Makefile  frugalwareutils.txt
doc/: Makefile  asciidoc.conf  frugalwareutils.3  grubconfig.txt  mouseconfig.txt  netconfig.txt  netconfigd.txt  po4a.cfg  raidconfig.txt  timeconfig.txt  xconfig.txt  xwmconfig.txt
doc/po/: .gitignore  Makefile
grubconfig/: Makefile  grubconfig.c
grubconfig/po/: Makefile  POTFILES.in  fr.po  hu.po  pl.po
libfwdialog/: Makefile  libfwdialog.c  libfwdialog.h
libfwdialog/po/: Makefile  POTFILES.in  fr.po  hu.po  pl.po
libfwgrub2config/: libfwgrub2config.c  libfwgrub2config.h
libfwgrubconfig/: Makefile  libfwgrubconfig.c  libfwgrubconfig.h  new.c  new.h
libfwmouseconfig/: Makefile  libfwmouseconfig.c  libfwmouseconfig.h
libfwnetconfig/: Makefile  libfwnetconfig.c  libfwnetconfig.h  pci.c
libfwnetconfig/po/: Makefile  POTFILES.in  fr.po  hu.po  pl.po
libfwraidconfig/: Makefile  libfwraidconfig.c  libfwraidconfig.h
libfwtimeconfig/: Makefile  libfwtimeconfig.c  libfwtimeconfig.h
libfwutil/: Makefile  libfwutil.c  libfwutil.h
libfwxconfig/: .gitignore  Makefile  libfwxconfig.c  libfwxconfig.h  xconfig-helper.c  xconfig-helper.h
libfwxconfig/po/: Makefile  POTFILES.in  fr.po  hu.po  pl.po
libfwxwmconfig/: Makefile  libfwxwmconfig.c  libfwxwmconfig.h
libfwxwmconfig/po/: Makefile  POTFILES.in  fr.po  hu.po  pl.po
libfwyabootcfg/: Makefile  libfwyabootcfg.c  libfwyabootcfg.h
mouseconfig/: Makefile  mouseconfig.c
mouseconfig/po/: Makefile  POTFILES.in  fr.po  hu.po  pl.po
netconfig/: Makefile  fwdialog.c  fwdialog.h  fwnetconfig.c  fwnetconfig.h  fwutil.c  fwutil.h  netconfig-rfkill.rules  netconfig-udev-wrapper  netconfig-wait-online.service  netconfig.c  netconfig.h  netconfig.service  netconfig.sleep
netconfig/doc/: Makefile  addendnum.1.hu  addendum.5.fr  netconfig.5  po4a.cfg
netconfig/doc/po/: Makefile  fr.po  hu.po
netconfig/po/: Makefile  fr.po  hu.po  pl.po
netconfigd/: Makefile  netconfigd.c
raidconfig/: Makefile  raidconfig.c
raidconfig/po/: Makefile  POTFILES.in  fr.po  hu.po  pl.po
sampleconfig/: Makefile  README  raidconfig.c
setup/: Makefile  TODO  removeme.c  setup.c  setup.h
setup/po/: Makefile  POTFILES.in  fr.po  hu.po  pl.po
timeconfig/: Makefile  timeconfig.c
timeconfig/po/: Makefile  POTFILES.in  fr.po  hu.po  pl.po
xconfig/: Makefile  xconfig.c
xconfig/po/: Makefile  POTFILES.in  de.po  fr.po  hu.po  pl.po
xwmconfig/: Makefile  xwmconfig.c
xwmconfig/po/: Makefile  POTFILES.in  hu.po  pl.po
yabootcfg/: Makefile  yabootcfg.c
yabootcfg/po/: Makefile  POTFILES.in
